fixed margins and text alignment

--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body{
 .pre-title-blurb-underneath{
     text-align: center;
     color: #3E2C1C;
-    font-size: 8px;;
+    font-size: 8px;
+    margin-top: -25px;
 }
 h3{
     text-align: center;
@@ -73,7 +74,7 @@ h6{
     width: 400px;
     margin-left: 50px;
     margin-right: 170px;
-    margin-top: 0px;
+    margin-top: -25px;
 }
 
 .two-columns{
@@ -85,7 +86,7 @@ h6{
 .burger-collection-title{
     text-align: left;
     color: #3E2C1C;
-    font-size: 92px;
+    font-size: 40px;
     margin-left: 400px;
     margin-bottom: 10px;
     margin-top: 120px;
@@ -96,5 +97,5 @@ h6{
 .beef-section-title{
     text-align: center;
     color: #3E2C1C;  
-    font-size: 1000px;
+    font-size: 25px;
 }
